--- a/gifapalooza/src/App.css
+++ b/gifapalooza/src/App.css
@@ -1,33 +1,46 @@
 .App {
+  height: 1000px;
+  width: 1000px;
   text-align: center;
+  display: grid;
+  grid-template-rows: 10% repeat(4, 1fr) 10%;
+  grid-template-columns: repeat(5, 1fr);
+  margin: 0 auto;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+li {
+  list-style: none;
+  display: inline-block;
+  padding: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.header {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+footer {
+  grid-column: 1;
+  grid-row: 6;
+}
+
+.search {
+  margin: 0 auto;
+}
+
+.gifs {
+  grid-column-start: 1 / span 4;
+  grid-row: 2 / span 5;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0 auto;
+  height: 1200px;
+  width: 1200px;
+  margin-left: -50px;
+  padding-right: 50px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-result {
+  margin: 0 auto;
+  height: 400px;
+  width: 400px;
 }
