--- a/gifapalooza/src/App.css
+++ b/gifapalooza/src/App.css
@@ -3,7 +3,7 @@
   width: 1000px;
   text-align: center;
   display: grid;
-  grid-template-rows: 10% repeat(4, 1fr) 10%;
+  grid-template-rows: 0.5fr 4fr 0.5fr;
   grid-template-columns: repeat(5, 1fr);
   margin: 0 auto;
 }
@@ -11,17 +11,20 @@
 li {
   list-style: none;
   display: inline-block;
-  padding: 5px;
+  padding: 0 5px;
 }
 
 .header {
-  grid-column: 1;
+  grid-column: 3;
   grid-row: 1;
+  margin: 0 auto;
 }
 
-footer {
-  grid-column: 1;
-  grid-row: 6;
+.footer {
+  margin-top: 40px;
+  grid-row: 3;
+  grid-column: 1 /span 5;
+  font-size: 10px;
 }
 
 .search {
@@ -30,12 +33,11 @@ footer {
 
 .gifs {
   grid-column-start: 1 / span 4;
-  grid-row: 2 / span 5;
+  grid-row: 2;
   align-items: center;
   margin: 0 auto;
   height: 1200px;
   width: 1200px;
-  margin-left: -50px;
   padding-right: 50px;
 }
 
@@ -43,4 +45,59 @@ footer {
   margin: 0 auto;
   height: 400px;
   width: 400px;
+}
+
+.random-result {
+  margin: 0 auto;
+}
+
+.hide-random-result {
+  display: none;
+}
+
+.random {
+  margin: 0 auto;
+  grid-column: 3;
+}
+
+.gif-search {
+  height: 50px;
+  width: 200px;
+  margin: 0 auto;
+  grid-column: 3;
+  align-items: center;
+}
+
+.search-form {
+  margin: 0 auto;
+  align-self: center;
+  grid-column: 3;
+}
+
+#gif-wheel {
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  grid-column: 3;
+  grid-row: 2;
+  background: #03001e;
+  background: -webkit-linear-gradient(to right, #fdeff9, #ec38bc, #7303c0, #03001e);
+  background: linear-gradient(to right, #fdeff9, #ec38bc, #7303c0, #03001e);
+  border-radius: 100%;
+}
+
+.spin {
+  position: relative;
+  animation: spin 3s ease-out;
+  transform-origin: center center;
+}
+
+@keyframes spin {
+  from {
+      transform-origin: center center;
+      transform: rotate(0deg);
+  }
+  to {
+      transform: rotate(1665deg);
+  }
 }
