--- a/gifapalooza/src/App.css
+++ b/gifapalooza/src/App.css
@@ -1,14 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Concert+One');
 @import url('https://fonts.googleapis.com/css?family=Abril+Fatface');
+body {
+  background: #f857a6;
+}
 
 .App {
-  height: 1000px;
-  width: 100%;
-  text-align: center;
   display: grid;
-  grid-template-rows: 0.5fr 4fr 0.25fr;
-  grid-template-columns: repeat(5, 1fr);
-  margin: 0 auto;
+  grid-template-rows: 0.5fr 1fr 0.25fr;
+  height: 600px;
+  margin: 0;
+}
+
+.App-no-gifs {
+  display: grid;
+  height: 150px;
+  grid-template-rows: 0.5fr 1fr 0.25fr;
+  margin: 0;
 }
 
 li {
@@ -21,24 +28,21 @@ a{
   text-decoration: none;
 }
 .header {
-  grid-column: 1 / span 5;
   grid-row: 1;
-  margin: 0, 20%;
+  margin: 0;
   text-align: center;
-  width: 107%;
+  width: 100%;
   padding-top: 1%; 
   background: #50C9C3; 
   background: -webkit-linear-gradient(to right, #96DEDA, #50C9C3);
   background: linear-gradient(to right, #96DEDA, #50C9C3); 
-
 }
 
 .footer {
   grid-row: 3;
-  grid-column: 1 / span 5;
   font-size: 10px;
   padding-top: 10px;
-  width: 107%;
+  width: 100%;
   padding-bottom: 1%;
   background: #50C9C3; 
   background: -webkit-linear-gradient(to right, #96DEDA, #50C9C3);
@@ -63,22 +67,22 @@ a{
 
 .search-with-gifs {
   margin: 0 auto;
-  height: 1235px;
-  width: 1235px;
+  width: 100%;
+  background: #f857a6;
 }
 
 .search-no-gifs {
   margin: 0 auto;
   height: 50px;
-  width: 1200px;
+  width: 100%;
+  background: #f857a6;
 }
 
 .gifs {
-  grid-column-start: 1 / span 4;
   grid-row: 2;
   align-items: center;
   margin: 0 auto;
-  padding-left: 2.8%;
+  padding-left: 3.1%;
 }
 
 .search-result {
@@ -88,28 +92,31 @@ a{
 }
 
 .random-result {
-  margin: 0 auto;
   height: 400px;
   width: 400px;
+  margin-left: 55%;
+  margin-bottom: -34.5%;
+  margin-top: -2%;
 }
 
 .hide-random-result {
   display: none;
 }
 
-.random {
-  margin: 0 auto;
+.random-no-search {
+  height: 30%;
   width: 100%;
-  display: grid;
-  grid-template-rows: 0.5fr 4fr 0.5fr;
-  grid-template-columns: repeat(5, 1fr)
+}
+
+.random-yes-search {
+  height: 30%;
+  width: 100%;
 }
 
 .gif-search {
   height: 50px;
   width: 200px;
   margin: 0 auto;
-  grid-column: 3;
   align-items: center;
   padding-bottom: 3%;
 }
@@ -117,17 +124,30 @@ a{
 .search-form {
   margin: 0 auto;
   align-self: center;
-  grid-column: 3;
   padding-top: 10px;
   padding-bottom: 20px;
   width: 300px;
 }
 
-#gif-wheel {
+#gif-wheel-true {
   width: 400px;
   height: 400px;
-  margin: 0 auto;
-  grid-column: 1;
+  margin-left: 5%;
+  margin-top: 3%;
+  margin-bottom: 4%;
+  grid-row: 2;
+  background: #03001e;
+  background: -webkit-linear-gradient(to right, #fdeff9, #ec38bc, #7303c0, #03001e);
+  background: linear-gradient(to right, #fdeff9, #ec38bc, #7303c0, #03001e);
+  border-radius: 100%;
+}
+
+#gif-wheel-false {
+  width: 400px;
+  height: 400px;
+  margin-left: 5%;
+  margin-top: 3%;
+  margin-bottom: 4%;
   grid-row: 2;
   background: #03001e;
   background: -webkit-linear-gradient(to right, #fdeff9, #ec38bc, #7303c0, #03001e);
@@ -136,18 +156,16 @@ a{
 }
 
 .spin {
-  position: relative;
   animation: spin 7s ease-out;
   transform-origin: center center;
 }
 
 .random-gif {
   grid-row: 2;
-  grid-column: 5;
   height: 60%;
   width: 60%;
-  padding-top: 20px;
-  margin-left: 40px;
+  margin-left: 85%;
+  margin-top: -1%;
 }
 
 .wheel-instructions {
@@ -174,7 +192,7 @@ a{
 .show-directions {
   font-size: 2em;
   font-family: 'Abril Fatface', cursive;
-  color: #93F9B9;
+  color: #50C9C3;
   height: 430px;
   width: 100%;
   padding-top: 2.5%;
@@ -192,14 +210,14 @@ a{
   width: 150px;
   font-size: 10px;
   margin-bottom: 10%;
-  background: #642B73; 
-  background: -webkit-linear-gradient(to right, #C6426E, #642B73); 
-  background: linear-gradient(to right, #C6426E, #642B73); 
-  border: #642B73;
+  background: #50C9C3; 
+  background: -webkit-linear-gradient(to right, #96DEDA, #50C9C3);
+  background: linear-gradient(to right, #96DEDA, #50C9C3);
+  color: #f857a6;
+  border: #50C9C3;
   text-align: center;
   font-family: 'Abril Fatface', cursive;
   font-size: 1.5em;
-  color: #FFAF7B;
   margin-right: 5%;
 }
 
@@ -208,10 +226,11 @@ a{
   height: 75px;
   width: 75px;
   font-size: 1em;
-  background: #F00000; 
-  background: -webkit-linear-gradient(to right, #DC281E, #F00000);
-  background: linear-gradient(to right, #DC281E, #F00000); 
-  color: white;
+  background: #50C9C3; 
+  background: -webkit-linear-gradient(to right, #96DEDA, #50C9C3);
+  background: linear-gradient(to right, #96DEDA, #50C9C3);
+  color: #f857a6;
+  border: #50C9C3;
   font-family: 'Abril Fatface', cursive;
   margin-bottom: 18%;
 }
@@ -224,6 +243,101 @@ a{
   margin-bottom: -10px;
 }
 
+.next {
+  height: 10%;
+  width: 10%;
+  margin: 0 auto;
+  align-self: center;
+}
+
+.next-button {
+  border-radius: 100%;
+  height: 75px;
+  width: 75px;
+  font-size: 1em;
+  background: #50C9C3; 
+  background: -webkit-linear-gradient(to right, #96DEDA, #50C9C3);
+  background: linear-gradient(to right, #96DEDA, #50C9C3);
+  color: #f857a6;
+  border: #50C9C3;
+  font-family: 'Abril Fatface', cursive;
+  margin-top: 10%;
+  margin-bottom: 10%;
+}
+
+.wheel-instructions {
+  font-family: 'Abril Fatface', cursive;
+  font-size: 40px;
+  padding-top: -20%;
+}
+
+.home {
+  margin: 0, auto;
+  text-align: center;
+  padding-top: 25%;
+  padding-right: 5px;
+}
+
+.home-nav {
+  margin-top: -19%;
+  margin-left: -2%;
+}
+
+.enter-link {
+  margin: 0 auto;
+  width: 50%;
+  padding-top: -85%;
+  padding-bottom: 5%;
+  animation: bounce 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite alternate-reverse both;
+}
+
+.enter {
+  text-align: center;
+  font-family: 'Concert One', cursive;
+  font-size: 20em;
+  color:#50C9C3;
+}
+
+.enter:hover {
+  text-decoration: underline;
+}
+
+.main {
+  margin: 0 auto;
+  text-align: center;
+  font-family: 'Concert One', cursive;
+  color: #50C9C3;
+  font-size: 2.5em;
+}
+
+.row0 {
+  animation: bounce 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite alternate-reverse both;
+}
+
+.row1 {
+  animation: bounce 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite alternate-reverse both;
+}
+
+.row1:hover {
+  text-decoration: underline;
+}
+
+.row2 {
+  animation: bounce 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite alternate-reverse both;
+}
+
+.row3 {
+  animation: bounce 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite alternate-reverse both;
+}
+
+.row3:hover {
+  text-decoration: underline;
+}
+
+.row4 {
+  animation: bounce 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite alternate-reverse both;
+}
+
 @keyframes spin {
   from {
       transform-origin: center center;
@@ -231,5 +345,16 @@ a{
   }
   to {
       transform: rotate(3600deg);
+    }
+}
+
+
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-75px);
   }
 }
